Fixed missing border between thead/tfoot <-> tbody
Former-commit-id: 4ed543019c70c48d88715a2e39d4a63bb901ac89

--- a/modules/ssg/front_end/content_types/table/table.css
+++ b/modules/ssg/front_end/content_types/table/table.css
@@ -21,6 +21,14 @@ th, td {
 	border: 10px solid var(--background-color);
 }
 
+thead {
+	border-bottom: 10px solid var(--background-color);
+}
+
+tfoot {
+	border-top: 10px solid var(--background-color);
+}
+
 [table-type="table-both"] th,
 [table-type="table-both"] tr > :first-child,
 [table-type="table-headcolumn"] tr > :first-child,
